--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,20 @@
 {
-    "builds": [
-      {
-        "src": "package.json",
-        "use": "@vercel/node"
-      }
-    ],
+    "version": 2,
+    "builds": [{ "src": "package.json", "use": "@vercel/node" }],
     "routes": [
+      { "handle": "filesystem" },
+      {
+        "src": "/api/.*",
+        "dest": "api/index.js"
+      },
       {
         "src": "/(.*)",
-        "dest": "index.js"
+        "dest": "index.html"
       }
     ],
     "env": {
       "NODE_ENV": "production"
-    }
+    },
+    "functions": { "api/index.js": { "runtime": "nodejs16" } }
   }
   
