--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,13 @@
 {
-    "version": 2,
-    "builds": [{ "src": "package.json", "use": "@vercel/node" }],
+    "builds": [
+      { "src": "package.json", "use": "@vercel/static-build" }
+    ],
     "routes": [
       { "handle": "filesystem" },
-      {
-        "src": "/api/.*",
-        "dest": "api/index.js"
-      },
-      {
-        "src": "/(.*)",
-        "dest": "index.html"
-      }
+      { "src": "/(.*)", "dest": "index.html" }
     ],
     "env": {
-      "NODE_ENV": "production"
-    },
-    "functions": { "api/index.js": { "runtime": "nodejs16" } }
+      "SERVER_PATH": "npm run server"
+    }
   }
   
